# fastapi

./: .gitignore  main.py  pyproject.toml
database/: connection.py  dependencies.py
model/: employee.py
